Updated the paths. Just add your HI id at the begining and the paths will update automatically

--- a/01_Video_DataPrep.Rmd
+++ b/01_Video_DataPrep.Rmd
@@ -20,19 +20,24 @@ set.seed(6) # At one point I "randomly "chose" stations within some Rstations. T
 
 # PATHS and other funcitons
 ```{r, message=FALSE, warning=FALSE}
-PathScripts<-"C:/Users/a39495/Documents/Projects/MAREANO/MAREANO_Video/"
-PathInputData<-"C:/Users/a39495/Havforskningsinstituttet/MAREANO Biotope modelling - VideoData/Input/"
-PathOutput<- "C:/Users/a39495/Havforskningsinstituttet/MAREANO Biotope modelling - VideoData/Output/"
-PathTaxonary<-"C:/Users/a39495/Havforskningsinstituttet/Video analysis lab - Reference List/Taxonary.xlsx"
+
+HI_user<-"a39495"
+
+PathScripts<-paste0("C:/Users/",HI_user,"/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Scripts/")
+PathInputData<-paste0("C:/Users/",HI_user,"/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Input/")
+PathOutput<-paste0("C:/Users/",HI_user,"/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Output/")
+PathTaxonary<- paste0("C:/Users/",HI_user,"/Havforskningsinstituttet/Video analysis lab - Reference List/Taxonary.xlsx")
 source(paste0(PathScripts, "MY_TaxonomicFromWormsDF.r"))
 source(paste0(PathScripts, "VME_Spp.r")) # I add this to make sure VME species are kepts even if they are below "MinSightings"
-#=======
-PathScripts<-"C:/Users/a21448/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Scripts/"
-PathInputData<-"C:/Users/a21448/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Input/"
-PathOutput<- "C:/Users/a21448/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Output/"
+# #=======
+# PathScripts<-"C:/Users/a39495/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Scripts/"
+# PathInputData<-"C:/Users/a39495/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Input/"
+# PathOutput<- "C:/Users/a39495/Havforskningsinstituttet/MAREANO Biotope modelling - General/VideoData/Output/"
 
 #source(paste0(PathScripts, "MY_TaxonomicFromWormsDF.r"))
 source("MY_TaxonomicFromWormsDF.r")
+source("VME_Spp.r")
+
 ```
 
 # MCMC options
